# trotline

./: .gitignore  Cargo.toml  README.md
Tests/: file2.txt
Tests/Directory/: file3.txt
src/: main.rs
