[package]
name = "trotline"
version = "1.0.1"
authors = ["suedeg"]
edition = "2018"
license = "MIT"
readme = "./README.md"
description = "A worse version of grep written as practice in concurrency and file IO. "
repository = "https://github.com/SuedeGently/trotline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
futures = "0.3.4"
custom_error = "1.7.1"
clap = "2.33.0"
